// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatefulComponent should show children from Component prop 1`] = `
<BlueBaseApp>
  <BlueBaseRoot>
    <ThemeProvider>
      <StatefulComponent
        component={[Function]}
        data={true}
        timeout={10000}
      >
        <ErrorObserver
          rest={
            Object {
              "data": true,
            }
          }
        >
          <ThemedComponent
            rest={
              Object {
                "data": true,
              }
            }
          >
            <ErrorObserver
              checkError={[Function]}
              rest={
                Object {
                  "data": true,
                }
              }
            >
              <DataObserver
                data={true}
                rest={
                  Object {
                    "data": true,
                  }
                }
              >
                <ThemedComponent
                  data={true}
                  rest={
                    Object {
                      "data": true,
                    }
                  }
                >
                  <DataObserver
                    data={true}
                    isEmpty={[Function]}
                    isLoading={[Function]}
                    loading={false}
                    rest={
                      Object {
                        "data": true,
                      }
                    }
                  >
                    <Comp
                      data={true}
                    >
                      <Text>
                        <Text>
                          Custom Component
                        </Text>
                      </Text>
                    </Comp>
                  </DataObserver>
                </ThemedComponent>
              </DataObserver>
            </ErrorObserver>
          </ThemedComponent>
        </ErrorObserver>
      </StatefulComponent>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;

exports[`StatefulComponent should show children nodes 1`] = `
<BlueBaseApp>
  <BlueBaseRoot>
    <ThemeProvider>
      <StatefulComponent
        data={true}
        timeout={10000}
      >
        <ErrorObserver
          rest={
            Object {
              "data": true,
            }
          }
        >
          <ThemedComponent
            rest={
              Object {
                "data": true,
              }
            }
          >
            <ErrorObserver
              checkError={[Function]}
              rest={
                Object {
                  "data": true,
                }
              }
            >
              <DataObserver
                data={true}
                rest={
                  Object {
                    "data": true,
                  }
                }
              >
                <ThemedComponent
                  data={true}
                  rest={
                    Object {
                      "data": true,
                    }
                  }
                >
                  <DataObserver
                    data={true}
                    isEmpty={[Function]}
                    isLoading={[Function]}
                    loading={false}
                    rest={
                      Object {
                        "data": true,
                      }
                    }
                  >
                    <Text>
                      <Text>
                        Content
                      </Text>
                    </Text>
                  </DataObserver>
                </ThemedComponent>
              </DataObserver>
            </ErrorObserver>
          </ThemedComponent>
        </ErrorObserver>
      </StatefulComponent>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;

exports[`StatefulComponent should show empty state as data is an empty array 1`] = `
<BlueBaseApp>
  <BlueBaseRoot>
    <ThemeProvider>
      <StatefulComponent
        data={Array []}
        timeout={10000}
      >
        <ErrorObserver
          rest={
            Object {
              "data": Array [],
            }
          }
        >
          <ThemedComponent
            rest={
              Object {
                "data": Array [],
              }
            }
          >
            <ErrorObserver
              checkError={[Function]}
              rest={
                Object {
                  "data": Array [],
                }
              }
            >
              <DataObserver
                data={Array []}
                rest={
                  Object {
                    "data": Array [],
                  }
                }
              >
                <ThemedComponent
                  data={Array []}
                  rest={
                    Object {
                      "data": Array [],
                    }
                  }
                >
                  <DataObserver
                    data={Array []}
                    isEmpty={[Function]}
                    isLoading={[Function]}
                    loading={false}
                    rest={
                      Object {
                        "data": Array [],
                      }
                    }
                  >
                    <EmptyState>
                      <ThemedComponent>
                        <EmptyState>
                          <ComponentState
                            description="Create new items to fill this area."
                            title="Empty Area"
                          >
                            <ThemedComponent
                              description="Create new items to fill this area."
                              title="Empty Area"
                            >
                              <ThemedComponent
                                description="Create new items to fill this area."
                                title="Empty Area"
                              >
                                <ComponentState
                                  description="Create new items to fill this area."
                                  styles={
                                    Object {
                                      "actionRoot": Object {
                                        "marginTop": 8,
                                      },
                                      "description": Object {
                                        "marginBottom": 8,
                                        "textAlign": "center",
                                      },
                                      "image": Object {
                                        "height": 250,
                                        "width": 250,
                                      },
                                      "imageRoot": Object {
                                        "marginBottom": 16,
                                      },
                                      "root": Object {
                                        "alignItems": "center",
                                        "flex": 1,
                                        "justifyContent": "center",
                                      },
                                      "title": Object {
                                        "marginBottom": 8,
                                        "textAlign": "center",
                                      },
                                    }
                                  }
                                  title="Empty Area"
                                >
                                  <View
                                    style={
                                      Object {
                                        "alignItems": "center",
                                        "flex": 1,
                                        "justifyContent": "center",
                                      }
                                    }
                                  >
                                    <ThemedComponent
                                      style={
                                        Object {
                                          "alignItems": "center",
                                          "flex": 1,
                                          "justifyContent": "center",
                                        }
                                      }
                                    >
                                      <ThemedComponent
                                        style={
                                          Object {
                                            "alignItems": "center",
                                            "flex": 1,
                                            "justifyContent": "center",
                                          }
                                        }
                                      >
                                        <ThemedComponent
                                          style={
                                            Object {
                                              "alignItems": "center",
                                              "flex": 1,
                                              "justifyContent": "center",
                                            }
                                          }
                                        >
                                          <View
                                            style={
                                              Object {
                                                "alignItems": "center",
                                                "flex": 1,
                                                "justifyContent": "center",
                                              }
                                            }
                                          >
                                            <View
                                              style={
                                                Object {
                                                  "alignItems": "center",
                                                  "flex": 1,
                                                  "justifyContent": "center",
                                                }
                                              }
                                            >
                                              <H6
                                                style={
                                                  Object {
                                                    "marginBottom": 8,
                                                    "textAlign": "center",
                                                  }
                                                }
                                              >
                                                <ThemedComponent
                                                  style={
                                                    Object {
                                                      "marginBottom": 8,
                                                      "textAlign": "center",
                                                    }
                                                  }
                                                >
                                                  <Component
                                                    style={
                                                      Object {
                                                        "marginBottom": 8,
                                                        "textAlign": "center",
                                                      }
                                                    }
                                                    styles={
                                                      Object {
                                                        "root": Object {
                                                          "color": "rgba(0, 0, 0, 0.87)",
                                                          "fontFamily": undefined,
                                                          "fontSize": 20,
                                                          "fontWeight": "500",
                                                        },
                                                      }
                                                    }
                                                  >
                                                    <Text
                                                      style={
                                                        Array [
                                                          Object {
                                                            "color": "rgba(0, 0, 0, 0.87)",
                                                            "fontFamily": undefined,
                                                            "fontSize": 20,
                                                            "fontWeight": "500",
                                                          },
                                                          Object {
                                                            "marginBottom": 8,
                                                            "textAlign": "center",
                                                          },
                                                        ]
                                                      }
                                                    >
                                                      <Text
                                                        style={
                                                          Array [
                                                            Object {
                                                              "color": "rgba(0, 0, 0, 0.87)",
                                                              "fontFamily": undefined,
                                                              "fontSize": 20,
                                                              "fontWeight": "500",
                                                            },
                                                            Object {
                                                              "marginBottom": 8,
                                                              "textAlign": "center",
                                                            },
                                                          ]
                                                        }
                                                      >
                                                        Empty Area
                                                      </Text>
                                                    </Text>
                                                  </Component>
                                                </ThemedComponent>
                                              </H6>
                                              <Body2
                                                style={
                                                  Object {
                                                    "marginBottom": 8,
                                                    "textAlign": "center",
                                                  }
                                                }
                                              >
                                                <ThemedComponent
                                                  style={
                                                    Object {
                                                      "marginBottom": 8,
                                                      "textAlign": "center",
                                                    }
                                                  }
                                                >
                                                  <Component
                                                    style={
                                                      Object {
                                                        "marginBottom": 8,
                                                        "textAlign": "center",
                                                      }
                                                    }
                                                    styles={
                                                      Object {
                                                        "root": Object {
                                                          "color": "rgba(0, 0, 0, 0.87)",
                                                          "fontFamily": undefined,
                                                          "fontSize": 14,
                                                          "fontWeight": "400",
                                                        },
                                                      }
                                                    }
                                                  >
                                                    <Text
                                                      style={
                                                        Array [
                                                          Object {
                                                            "color": "rgba(0, 0, 0, 0.87)",
                                                            "fontFamily": undefined,
                                                            "fontSize": 14,
                                                            "fontWeight": "400",
                                                          },
                                                          Object {
                                                            "marginBottom": 8,
                                                            "textAlign": "center",
                                                          },
                                                        ]
                                                      }
                                                    >
                                                      <Text
                                                        style={
                                                          Array [
                                                            Object {
                                                              "color": "rgba(0, 0, 0, 0.87)",
                                                              "fontFamily": undefined,
                                                              "fontSize": 14,
                                                              "fontWeight": "400",
                                                            },
                                                            Object {
                                                              "marginBottom": 8,
                                                              "textAlign": "center",
                                                            },
                                                          ]
                                                        }
                                                      >
                                                        Create new items to fill this area.
                                                      </Text>
                                                    </Text>
                                                  </Component>
                                                </ThemedComponent>
                                              </Body2>
                                            </View>
                                          </View>
                                        </ThemedComponent>
                                      </ThemedComponent>
                                    </ThemedComponent>
                                  </View>
                                </ComponentState>
                              </ThemedComponent>
                            </ThemedComponent>
                          </ComponentState>
                        </EmptyState>
                      </ThemedComponent>
                    </EmptyState>
                  </DataObserver>
                </ThemedComponent>
              </DataObserver>
            </ErrorObserver>
          </ThemedComponent>
        </ErrorObserver>
      </StatefulComponent>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;

exports[`StatefulComponent should show empty state as no data is provided 1`] = `
<BlueBaseApp>
  <BlueBaseRoot>
    <ThemeProvider>
      <StatefulComponent
        timeout={10000}
      >
        <ErrorObserver
          rest={
            Object {
              "data": undefined,
            }
          }
        >
          <ThemedComponent
            rest={
              Object {
                "data": undefined,
              }
            }
          >
            <ErrorObserver
              checkError={[Function]}
              rest={
                Object {
                  "data": undefined,
                }
              }
            >
              <DataObserver
                rest={
                  Object {
                    "data": undefined,
                  }
                }
              >
                <ThemedComponent
                  rest={
                    Object {
                      "data": undefined,
                    }
                  }
                >
                  <DataObserver
                    isEmpty={[Function]}
                    isLoading={[Function]}
                    loading={false}
                    rest={
                      Object {
                        "data": undefined,
                      }
                    }
                  >
                    <EmptyState>
                      <ThemedComponent>
                        <EmptyState>
                          <ComponentState
                            description="Create new items to fill this area."
                            title="Empty Area"
                          >
                            <ThemedComponent
                              description="Create new items to fill this area."
                              title="Empty Area"
                            >
                              <ThemedComponent
                                description="Create new items to fill this area."
                                title="Empty Area"
                              >
                                <ComponentState
                                  description="Create new items to fill this area."
                                  styles={
                                    Object {
                                      "actionRoot": Object {
                                        "marginTop": 8,
                                      },
                                      "description": Object {
                                        "marginBottom": 8,
                                        "textAlign": "center",
                                      },
                                      "image": Object {
                                        "height": 250,
                                        "width": 250,
                                      },
                                      "imageRoot": Object {
                                        "marginBottom": 16,
                                      },
                                      "root": Object {
                                        "alignItems": "center",
                                        "flex": 1,
                                        "justifyContent": "center",
                                      },
                                      "title": Object {
                                        "marginBottom": 8,
                                        "textAlign": "center",
                                      },
                                    }
                                  }
                                  title="Empty Area"
                                >
                                  <View
                                    style={
                                      Object {
                                        "alignItems": "center",
                                        "flex": 1,
                                        "justifyContent": "center",
                                      }
                                    }
                                  >
                                    <ThemedComponent
                                      style={
                                        Object {
                                          "alignItems": "center",
                                          "flex": 1,
                                          "justifyContent": "center",
                                        }
                                      }
                                    >
                                      <ThemedComponent
                                        style={
                                          Object {
                                            "alignItems": "center",
                                            "flex": 1,
                                            "justifyContent": "center",
                                          }
                                        }
                                      >
                                        <ThemedComponent
                                          style={
                                            Object {
                                              "alignItems": "center",
                                              "flex": 1,
                                              "justifyContent": "center",
                                            }
                                          }
                                        >
                                          <View
                                            style={
                                              Object {
                                                "alignItems": "center",
                                                "flex": 1,
                                                "justifyContent": "center",
                                              }
                                            }
                                          >
                                            <View
                                              style={
                                                Object {
                                                  "alignItems": "center",
                                                  "flex": 1,
                                                  "justifyContent": "center",
                                                }
                                              }
                                            >
                                              <H6
                                                style={
                                                  Object {
                                                    "marginBottom": 8,
                                                    "textAlign": "center",
                                                  }
                                                }
                                              >
                                                <ThemedComponent
                                                  style={
                                                    Object {
                                                      "marginBottom": 8,
                                                      "textAlign": "center",
                                                    }
                                                  }
                                                >
                                                  <Component
                                                    style={
                                                      Object {
                                                        "marginBottom": 8,
                                                        "textAlign": "center",
                                                      }
                                                    }
                                                    styles={
                                                      Object {
                                                        "root": Object {
                                                          "color": "rgba(0, 0, 0, 0.87)",
                                                          "fontFamily": undefined,
                                                          "fontSize": 20,
                                                          "fontWeight": "500",
                                                        },
                                                      }
                                                    }
                                                  >
                                                    <Text
                                                      style={
                                                        Array [
                                                          Object {
                                                            "color": "rgba(0, 0, 0, 0.87)",
                                                            "fontFamily": undefined,
                                                            "fontSize": 20,
                                                            "fontWeight": "500",
                                                          },
                                                          Object {
                                                            "marginBottom": 8,
                                                            "textAlign": "center",
                                                          },
                                                        ]
                                                      }
                                                    >
                                                      <Text
                                                        style={
                                                          Array [
                                                            Object {
                                                              "color": "rgba(0, 0, 0, 0.87)",
                                                              "fontFamily": undefined,
                                                              "fontSize": 20,
                                                              "fontWeight": "500",
                                                            },
                                                            Object {
                                                              "marginBottom": 8,
                                                              "textAlign": "center",
                                                            },
                                                          ]
                                                        }
                                                      >
                                                        Empty Area
                                                      </Text>
                                                    </Text>
                                                  </Component>
                                                </ThemedComponent>
                                              </H6>
                                              <Body2
                                                style={
                                                  Object {
                                                    "marginBottom": 8,
                                                    "textAlign": "center",
                                                  }
                                                }
                                              >
                                                <ThemedComponent
                                                  style={
                                                    Object {
                                                      "marginBottom": 8,
                                                      "textAlign": "center",
                                                    }
                                                  }
                                                >
                                                  <Component
                                                    style={
                                                      Object {
                                                        "marginBottom": 8,
                                                        "textAlign": "center",
                                                      }
                                                    }
                                                    styles={
                                                      Object {
                                                        "root": Object {
                                                          "color": "rgba(0, 0, 0, 0.87)",
                                                          "fontFamily": undefined,
                                                          "fontSize": 14,
                                                          "fontWeight": "400",
                                                        },
                                                      }
                                                    }
                                                  >
                                                    <Text
                                                      style={
                                                        Array [
                                                          Object {
                                                            "color": "rgba(0, 0, 0, 0.87)",
                                                            "fontFamily": undefined,
                                                            "fontSize": 14,
                                                            "fontWeight": "400",
                                                          },
                                                          Object {
                                                            "marginBottom": 8,
                                                            "textAlign": "center",
                                                          },
                                                        ]
                                                      }
                                                    >
                                                      <Text
                                                        style={
                                                          Array [
                                                            Object {
                                                              "color": "rgba(0, 0, 0, 0.87)",
                                                              "fontFamily": undefined,
                                                              "fontSize": 14,
                                                              "fontWeight": "400",
                                                            },
                                                            Object {
                                                              "marginBottom": 8,
                                                              "textAlign": "center",
                                                            },
                                                          ]
                                                        }
                                                      >
                                                        Create new items to fill this area.
                                                      </Text>
                                                    </Text>
                                                  </Component>
                                                </ThemedComponent>
                                              </Body2>
                                            </View>
                                          </View>
                                        </ThemedComponent>
                                      </ThemedComponent>
                                    </ThemedComponent>
                                  </View>
                                </ComponentState>
                              </ThemedComponent>
                            </ThemedComponent>
                          </ComponentState>
                        </EmptyState>
                      </ThemedComponent>
                    </EmptyState>
                  </DataObserver>
                </ThemedComponent>
              </DataObserver>
            </ErrorObserver>
          </ThemedComponent>
        </ErrorObserver>
      </StatefulComponent>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;

exports[`StatefulComponent should show loading state if loading is set to true 1`] = `
<BlueBaseApp>
  <BlueBaseRoot>
    <ThemeProvider>
      <StatefulComponent
        delay={0}
        loading={true}
        timeout={0}
      >
        <ErrorObserver
          rest={
            Object {
              "data": undefined,
            }
          }
        >
          <ThemedComponent
            rest={
              Object {
                "data": undefined,
              }
            }
          >
            <ErrorObserver
              checkError={[Function]}
              rest={
                Object {
                  "data": undefined,
                }
              }
            >
              <DataObserver
                loading={true}
                rest={
                  Object {
                    "data": undefined,
                  }
                }
              >
                <ThemedComponent
                  loading={true}
                  rest={
                    Object {
                      "data": undefined,
                    }
                  }
                >
                  <DataObserver
                    isEmpty={[Function]}
                    isLoading={[Function]}
                    loading={true}
                    rest={
                      Object {
                        "data": undefined,
                      }
                    }
                  >
                    <WaitObserver
                      delay={0}
                      timeout={0}
                    >
                      <ThemedComponent
                        delay={0}
                        timeout={0}
                      >
                        <WaitObserver
                          delay={0}
                          onRetry={[Function]}
                          onTimeout={[Function]}
                          timeout={0}
                        >
                          <LoadingState
                            retry={[Function]}
                            timedOut={true}
                          >
                            <ThemedComponent
                              retry={[Function]}
                              timedOut={true}
                            >
                              <ThemedComponent
                                retry={[Function]}
                                timedOut={true}
                              >
                                <ThemedComponent
                                  retry={[Function]}
                                  timedOut={true}
                                >
                                  <LoadingState
                                    retry={[Function]}
                                    timedOut={true}
                                  >
                                    <ComponentState
                                      actionOnPress={[Function]}
                                      actionTitle="Retry"
                                      description="This is taking longer than usual"
                                      image={<ActivityIndicator />}
                                    >
                                      <ThemedComponent
                                        actionOnPress={[Function]}
                                        actionTitle="Retry"
                                        description="This is taking longer than usual"
                                        image={<ActivityIndicator />}
                                      >
                                        <ThemedComponent
                                          actionOnPress={[Function]}
                                          actionTitle="Retry"
                                          description="This is taking longer than usual"
                                          image={<ActivityIndicator />}
                                        >
                                          <ThemedComponent
                                            actionOnPress={[Function]}
                                            actionTitle="Retry"
                                            description="This is taking longer than usual"
                                            image={<ActivityIndicator />}
                                          >
                                            <ComponentState
                                              actionOnPress={[Function]}
                                              actionTitle="Retry"
                                              description="This is taking longer than usual"
                                              image={<ActivityIndicator />}
                                              styles={
                                                Object {
                                                  "actionRoot": Object {
                                                    "marginTop": 8,
                                                  },
                                                  "description": Object {
                                                    "marginBottom": 8,
                                                    "textAlign": "center",
                                                  },
                                                  "image": Object {
                                                    "height": 250,
                                                    "width": 250,
                                                  },
                                                  "imageRoot": Object {
                                                    "marginBottom": 16,
                                                  },
                                                  "root": Object {
                                                    "alignItems": "center",
                                                    "flex": 1,
                                                    "justifyContent": "center",
                                                  },
                                                  "title": Object {
                                                    "marginBottom": 8,
                                                    "textAlign": "center",
                                                  },
                                                }
                                              }
                                            >
                                              <View
                                                style={
                                                  Object {
                                                    "alignItems": "center",
                                                    "flex": 1,
                                                    "justifyContent": "center",
                                                  }
                                                }
                                              >
                                                <ThemedComponent
                                                  style={
                                                    Object {
                                                      "alignItems": "center",
                                                      "flex": 1,
                                                      "justifyContent": "center",
                                                    }
                                                  }
                                                >
                                                  <ThemedComponent
                                                    style={
                                                      Object {
                                                        "alignItems": "center",
                                                        "flex": 1,
                                                        "justifyContent": "center",
                                                      }
                                                    }
                                                  >
                                                    <ThemedComponent
                                                      style={
                                                        Object {
                                                          "alignItems": "center",
                                                          "flex": 1,
                                                          "justifyContent": "center",
                                                        }
                                                      }
                                                    >
                                                      <ThemedComponent
                                                        style={
                                                          Object {
                                                            "alignItems": "center",
                                                            "flex": 1,
                                                            "justifyContent": "center",
                                                          }
                                                        }
                                                      >
                                                        <ThemedComponent
                                                          style={
                                                            Object {
                                                              "alignItems": "center",
                                                              "flex": 1,
                                                              "justifyContent": "center",
                                                            }
                                                          }
                                                        >
                                                          <View
                                                            style={
                                                              Object {
                                                                "alignItems": "center",
                                                                "flex": 1,
                                                                "justifyContent": "center",
                                                              }
                                                            }
                                                          >
                                                            <View
                                                              style={
                                                                Object {
                                                                  "alignItems": "center",
                                                                  "flex": 1,
                                                                  "justifyContent": "center",
                                                                }
                                                              }
                                                            >
                                                              <View
                                                                style={
                                                                  Object {
                                                                    "marginBottom": 16,
                                                                  }
                                                                }
                                                              >
                                                                <ThemedComponent
                                                                  style={
                                                                    Object {
                                                                      "marginBottom": 16,
                                                                    }
                                                                  }
                                                                >
                                                                  <ThemedComponent
                                                                    style={
                                                                      Object {
                                                                        "marginBottom": 16,
                                                                      }
                                                                    }
                                                                  >
                                                                    <ThemedComponent
                                                                      style={
                                                                        Object {
                                                                          "marginBottom": 16,
                                                                        }
                                                                      }
                                                                    >
                                                                      <ThemedComponent
                                                                        style={
                                                                          Object {
                                                                            "marginBottom": 16,
                                                                          }
                                                                        }
                                                                      >
                                                                        <ThemedComponent
                                                                          style={
                                                                            Object {
                                                                              "marginBottom": 16,
                                                                            }
                                                                          }
                                                                        >
                                                                          <ThemedComponent
                                                                            style={
                                                                              Object {
                                                                                "marginBottom": 16,
                                                                              }
                                                                            }
                                                                          >
                                                                            <View
                                                                              style={
                                                                                Object {
                                                                                  "marginBottom": 16,
                                                                                }
                                                                              }
                                                                            >
                                                                              <View
                                                                                style={
                                                                                  Object {
                                                                                    "marginBottom": 16,
                                                                                  }
                                                                                }
                                                                              >
                                                                                <ActivityIndicator>
                                                                                  <ThemedComponent>
                                                                                    <ThemedComponent>
                                                                                      <ThemedComponent>
                                                                                        <ActivityIndicator
                                                                                          animating={true}
                                                                                          color="#999999"
                                                                                          hidesWhenStopped={true}
                                                                                          size="small"
                                                                                        >
                                                                                          <ActivityIndicator
                                                                                            animating={true}
                                                                                            color="#999999"
                                                                                            hidesWhenStopped={true}
                                                                                            size="small"
                                                                                          />
                                                                                        </ActivityIndicator>
                                                                                      </ThemedComponent>
                                                                                    </ThemedComponent>
                                                                                  </ThemedComponent>
                                                                                </ActivityIndicator>
                                                                              </View>
                                                                            </View>
                                                                          </ThemedComponent>
                                                                        </ThemedComponent>
                                                                      </ThemedComponent>
                                                                    </ThemedComponent>
                                                                  </ThemedComponent>
                                                                </ThemedComponent>
                                                              </View>
                                                              <Body2
                                                                style={
                                                                  Object {
                                                                    "marginBottom": 8,
                                                                    "textAlign": "center",
                                                                  }
                                                                }
                                                              >
                                                                <ThemedComponent
                                                                  style={
                                                                    Object {
                                                                      "marginBottom": 8,
                                                                      "textAlign": "center",
                                                                    }
                                                                  }
                                                                >
                                                                  <Component
                                                                    style={
                                                                      Object {
                                                                        "marginBottom": 8,
                                                                        "textAlign": "center",
                                                                      }
                                                                    }
                                                                    styles={
                                                                      Object {
                                                                        "root": Object {
                                                                          "color": "rgba(0, 0, 0, 0.87)",
                                                                          "fontFamily": undefined,
                                                                          "fontSize": 14,
                                                                          "fontWeight": "400",
                                                                        },
                                                                      }
                                                                    }
                                                                  >
                                                                    <Text
                                                                      style={
                                                                        Array [
                                                                          Object {
                                                                            "color": "rgba(0, 0, 0, 0.87)",
                                                                            "fontFamily": undefined,
                                                                            "fontSize": 14,
                                                                            "fontWeight": "400",
                                                                          },
                                                                          Object {
                                                                            "marginBottom": 8,
                                                                            "textAlign": "center",
                                                                          },
                                                                        ]
                                                                      }
                                                                    >
                                                                      <Text
                                                                        style={
                                                                          Array [
                                                                            Object {
                                                                              "color": "rgba(0, 0, 0, 0.87)",
                                                                              "fontFamily": undefined,
                                                                              "fontSize": 14,
                                                                              "fontWeight": "400",
                                                                            },
                                                                            Object {
                                                                              "marginBottom": 8,
                                                                              "textAlign": "center",
                                                                            },
                                                                          ]
                                                                        }
                                                                      >
                                                                        This is taking longer than usual
                                                                      </Text>
                                                                    </Text>
                                                                  </Component>
                                                                </ThemedComponent>
                                                              </Body2>
                                                              <View
                                                                style={
                                                                  Object {
                                                                    "marginTop": 8,
                                                                  }
                                                                }
                                                              >
                                                                <ThemedComponent
                                                                  style={
                                                                    Object {
                                                                      "marginTop": 8,
                                                                    }
                                                                  }
                                                                >
                                                                  <ThemedComponent
                                                                    style={
                                                                      Object {
                                                                        "marginTop": 8,
                                                                      }
                                                                    }
                                                                  >
                                                                    <ThemedComponent
                                                                      style={
                                                                        Object {
                                                                          "marginTop": 8,
                                                                        }
                                                                      }
                                                                    >
                                                                      <ThemedComponent
                                                                        style={
                                                                          Object {
                                                                            "marginTop": 8,
                                                                          }
                                                                        }
                                                                      >
                                                                        <ThemedComponent
                                                                          style={
                                                                            Object {
                                                                              "marginTop": 8,
                                                                            }
                                                                          }
                                                                        >
                                                                          <ThemedComponent
                                                                            style={
                                                                              Object {
                                                                                "marginTop": 8,
                                                                              }
                                                                            }
                                                                          >
                                                                            <ThemedComponent
                                                                              style={
                                                                                Object {
                                                                                  "marginTop": 8,
                                                                                }
                                                                              }
                                                                            >
                                                                              <View
                                                                                style={
                                                                                  Object {
                                                                                    "marginTop": 8,
                                                                                  }
                                                                                }
                                                                              >
                                                                                <View
                                                                                  style={
                                                                                    Object {
                                                                                      "marginTop": 8,
                                                                                    }
                                                                                  }
                                                                                >
                                                                                  <Button
                                                                                    color="primary"
                                                                                    onPress={[Function]}
                                                                                  >
                                                                                    <ThemedComponent
                                                                                      color="primary"
                                                                                      onPress={[Function]}
                                                                                    >
                                                                                      <Button
                                                                                        color="primary"
                                                                                        onPress={[Function]}
                                                                                        styles={
                                                                                          Object {
                                                                                            "default": Object {
                                                                                              "backgroundColor": "#fafafa",
                                                                                            },
                                                                                            "defaultText": Object {},
                                                                                            "fullWidth": Object {
                                                                                              "alignSelf": "stretch",
                                                                                            },
                                                                                            "link": Object {},
                                                                                            "linkText": Object {},
                                                                                            "primary": Object {
                                                                                              "backgroundColor": "#3f51b5",
                                                                                            },
                                                                                            "primaryText": Object {
                                                                                              "color": "#fff",
                                                                                            },
                                                                                            "root": Object {
                                                                                              "alignSelf": "flex-start",
                                                                                              "borderRadius": 4,
                                                                                              "paddingBottom": 8,
                                                                                              "paddingLeft": 16,
                                                                                              "paddingRight": 16,
                                                                                              "paddingTop": 8,
                                                                                            },
                                                                                            "secondary": Object {
                                                                                              "backgroundColor": "#f50057",
                                                                                            },
                                                                                            "secondaryText": Object {
                                                                                              "color": "#fff",
                                                                                            },
                                                                                            "text": Object {
                                                                                              "color": "rgba(0, 0, 0, 0.87)",
                                                                                              "fontFamily": undefined,
                                                                                              "fontSize": 14,
                                                                                              "fontWeight": "500",
                                                                                              "textAlign": "center",
                                                                                              "textTransform": "uppercase",
                                                                                            },
                                                                                          }
                                                                                        }
                                                                                      >
                                                                                        <TouchableOpacity
                                                                                          accessibilityRole="button"
                                                                                          activeOpacity={0.2}
                                                                                          onPress={[Function]}
                                                                                        >
                                                                                          <AnimatedComponent
                                                                                            accessibilityRole="button"
                                                                                            accessible={true}
                                                                                            isTVSelectable={true}
                                                                                            onResponderGrant={[Function]}
                                                                                            onResponderMove={[Function]}
                                                                                            onResponderRelease={[Function]}
                                                                                            onResponderTerminate={[Function]}
                                                                                            onResponderTerminationRequest={[Function]}
                                                                                            onStartShouldSetResponder={[Function]}
                                                                                            style={
                                                                                              Array [
                                                                                                undefined,
                                                                                                Object {
                                                                                                  "opacity": 1,
                                                                                                },
                                                                                              ]
                                                                                            }
                                                                                          >
                                                                                            <View
                                                                                              accessibilityRole="button"
                                                                                              accessible={true}
                                                                                              isTVSelectable={true}
                                                                                              onResponderGrant={[Function]}
                                                                                              onResponderMove={[Function]}
                                                                                              onResponderRelease={[Function]}
                                                                                              onResponderTerminate={[Function]}
                                                                                              onResponderTerminationRequest={[Function]}
                                                                                              onStartShouldSetResponder={[Function]}
                                                                                              style={
                                                                                                Object {
                                                                                                  "opacity": 1,
                                                                                                }
                                                                                              }
                                                                                            >
                                                                                              <View
                                                                                                accessibilityRole="button"
                                                                                                accessible={true}
                                                                                                isTVSelectable={true}
                                                                                                onResponderGrant={[Function]}
                                                                                                onResponderMove={[Function]}
                                                                                                onResponderRelease={[Function]}
                                                                                                onResponderTerminate={[Function]}
                                                                                                onResponderTerminationRequest={[Function]}
                                                                                                onStartShouldSetResponder={[Function]}
                                                                                                style={
                                                                                                  Object {
                                                                                                    "opacity": 1,
                                                                                                  }
                                                                                                }
                                                                                              >
                                                                                                <View
                                                                                                  style={
                                                                                                    Array [
                                                                                                      Object {
                                                                                                        "alignSelf": "flex-start",
                                                                                                        "borderRadius": 4,
                                                                                                        "paddingBottom": 8,
                                                                                                        "paddingLeft": 16,
                                                                                                        "paddingRight": 16,
                                                                                                        "paddingTop": 8,
                                                                                                      },
                                                                                                      Object {
                                                                                                        "backgroundColor": "#3f51b5",
                                                                                                      },
                                                                                                    ]
                                                                                                  }
                                                                                                >
                                                                                                  <View
                                                                                                    style={
                                                                                                      Array [
                                                                                                        Object {
                                                                                                          "alignSelf": "flex-start",
                                                                                                          "borderRadius": 4,
                                                                                                          "paddingBottom": 8,
                                                                                                          "paddingLeft": 16,
                                                                                                          "paddingRight": 16,
                                                                                                          "paddingTop": 8,
                                                                                                        },
                                                                                                        Object {
                                                                                                          "backgroundColor": "#3f51b5",
                                                                                                        },
                                                                                                      ]
                                                                                                    }
                                                                                                  >
                                                                                                    <Text
                                                                                                      style={
                                                                                                        Array [
                                                                                                          Object {
                                                                                                            "color": "rgba(0, 0, 0, 0.87)",
                                                                                                            "fontFamily": undefined,
                                                                                                            "fontSize": 14,
                                                                                                            "fontWeight": "500",
                                                                                                            "textAlign": "center",
                                                                                                            "textTransform": "uppercase",
                                                                                                          },
                                                                                                          Object {
                                                                                                            "color": "#fff",
                                                                                                          },
                                                                                                        ]
                                                                                                      }
                                                                                                    >
                                                                                                      <Text
                                                                                                        style={
                                                                                                          Array [
                                                                                                            Object {
                                                                                                              "color": "rgba(0, 0, 0, 0.87)",
                                                                                                              "fontFamily": undefined,
                                                                                                              "fontSize": 14,
                                                                                                              "fontWeight": "500",
                                                                                                              "textAlign": "center",
                                                                                                              "textTransform": "uppercase",
                                                                                                            },
                                                                                                            Object {
                                                                                                              "color": "#fff",
                                                                                                            },
                                                                                                          ]
                                                                                                        }
                                                                                                      >
                                                                                                        Retry
                                                                                                      </Text>
                                                                                                    </Text>
                                                                                                  </View>
                                                                                                </View>
                                                                                              </View>
                                                                                            </View>
                                                                                          </AnimatedComponent>
                                                                                        </TouchableOpacity>
                                                                                      </Button>
                                                                                    </ThemedComponent>
                                                                                  </Button>
                                                                                </View>
                                                                              </View>
                                                                            </ThemedComponent>
                                                                          </ThemedComponent>
                                                                        </ThemedComponent>
                                                                      </ThemedComponent>
                                                                    </ThemedComponent>
                                                                  </ThemedComponent>
                                                                </ThemedComponent>
                                                              </View>
                                                            </View>
                                                          </View>
                                                        </ThemedComponent>
                                                      </ThemedComponent>
                                                    </ThemedComponent>
                                                  </ThemedComponent>
                                                </ThemedComponent>
                                              </View>
                                            </ComponentState>
                                          </ThemedComponent>
                                        </ThemedComponent>
                                      </ThemedComponent>
                                    </ComponentState>
                                  </LoadingState>
                                </ThemedComponent>
                              </ThemedComponent>
                            </ThemedComponent>
                          </LoadingState>
                        </WaitObserver>
                      </ThemedComponent>
                    </WaitObserver>
                  </DataObserver>
                </ThemedComponent>
              </DataObserver>
            </ErrorObserver>
          </ThemedComponent>
        </ErrorObserver>
      </StatefulComponent>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;

exports[`StatefulComponent should show render prop children 1`] = `
<BlueBaseApp>
  <BlueBaseRoot>
    <ThemeProvider>
      <StatefulComponent
        data={true}
        timeout={10000}
      >
        <ErrorObserver
          rest={
            Object {
              "data": true,
            }
          }
        >
          <ThemedComponent
            rest={
              Object {
                "data": true,
              }
            }
          >
            <ErrorObserver
              checkError={[Function]}
              rest={
                Object {
                  "data": true,
                }
              }
            >
              <DataObserver
                data={true}
                rest={
                  Object {
                    "data": true,
                  }
                }
              >
                <ThemedComponent
                  data={true}
                  rest={
                    Object {
                      "data": true,
                    }
                  }
                >
                  <DataObserver
                    data={true}
                    isEmpty={[Function]}
                    isLoading={[Function]}
                    loading={false}
                    rest={
                      Object {
                        "data": true,
                      }
                    }
                  >
                    <Text>
                      <Text>
                        Render prop
                      </Text>
                    </Text>
                  </DataObserver>
                </ThemedComponent>
              </DataObserver>
            </ErrorObserver>
          </ThemedComponent>
        </ErrorObserver>
      </StatefulComponent>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;
